--- a/lesson9/task1/task1.html
+++ b/lesson9/task1/task1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/tasks/orders.js"></script>
-    <script src="task2.js"></script>
+    <script src="/lesson9/orders.js"></script>
+    <script src="task1.js"></script>
 </body>
 </html>
