--- a/lesson9/task4/task4.html
+++ b/lesson9/task4/task4.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/tasks/orders.js"></script>
+    <script src="/lesson9/orders.js"></script>
     <script src="task4.js"></script>
 </body>
 </html>
