edited headings in html

--- a/lesson practice 4/form.html
+++ b/lesson practice 4/form.html
@@ -19,7 +19,7 @@
         <input class="name" type="text" name = "name" placeholder="Iмʼя" /><br />
         <input class="surname" type="text" name = "surname"placeholder="Фамілія" /><br />
         <input class="birthdate" type="text" name = "birthdate"placeholder="Дата народження" /><br />
-        <h3>Gender</h3>
+        <h3>Стать</h3>
         <p><input type="radio" name = "gender" value="F" /> Female</p>
         <p><input type="radio" name="gender" value ="M" />Male</p>
         <p><input type="radio" name="gender" value ="N/A" />N/A</p>
@@ -29,7 +29,7 @@
           <option value="KV">Kiev</option>
           <option value="LV">Lviv</option></select
         ><br />
-        <h3>address</h3>
+        <h3>Адреса</h3>
         <textarea name="address"></textarea><br />
         <h3>Якими мовами володієте?</h3>
         <p><input name = "language"type="checkbox" value="ENG" />English</p>
