refactor-form-fields

--- a/lesson practice 4/form.html
+++ b/lesson practice 4/form.html
@@ -24,7 +24,7 @@
         <p><input type="radio" name="gender" value ="M" />Male</p>
         <p><input type="radio" name="gender" value ="N/A" />N/A</p>
         <br />
-        <select >
+        <select name = 'city' >
           <option value="ODS">Odessa</option>
           <option value="KV">Kiev</option>
           <option value="LV">Lviv</option></select
