--- a/lesson practice 3/index.html
+++ b/lesson practice 3/index.html
@@ -10,10 +10,15 @@
     <div class="wrapper">
       <div class="categories"></div>
       <div class="products"></div>
-      <div class="info">
-      </div>
+      <div class="info"></div>
     </div>
-    <form id="formWrapper"></form>
+
+    <div class="orders-container hidden">
+      <div class="orders"></div>
+    </div>
+
+    <button class="orderButton">Мої замовлення</button>
+    <button class="categoriesButton">Категорії</button>
 
     <script src="js/data.js"></script>
     <script src="js/app.js"></script>
