--- a/task18.1/task.18.1.html
+++ b/task18.1/task.18.1.html
@@ -8,6 +8,6 @@
   <h1 id="timer">00:00</h1>
   <button onclick="startTimer()">Старт</button>
 
-  <script src="task.18.1.js"></script>
+  <script src="/task18.1/dist/task.18.1.js"></script>
 </body>
 </html>
