--- a/task20.1/task20.1.html
+++ b/task20.1/task20.1.html
@@ -59,6 +59,6 @@
  
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="node_modules/moment/min/moment.min.js"></script>
-    <script src="task.20.1.js"></script>
+    <script src="/task20.1/js/task.20.1.js"></script>
   </body>
 </html>
